--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="styles/architect.css">
 </head>
 <body>
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <nav>
+            <h3>G3 Architects</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+    </footer>
     
 </body>
 </html>
