started shared css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <!-- header section end -->
     <main>
-        <!-- feature section -->
+        <!-- team section start-->
         <section class="teams-container">
             <div class="teams-img-container">
                 <img src="./images/team1.png" alt="">
@@ -48,6 +48,19 @@
                 <button class="btn-primary">Explore More</button>
 
             </div>
+        </section>
+        <!-- team section end -->
+
+        <!-- Features Section start -->
+        <section class="Features">
+
+        </section>
+        <!-- Features Section end -->
+        <!-- Facts Section start -->
+        <section class="Facts">
+            <h3 class="Some-Facts">Some Facts</h3>
+            <p class="Facts-content">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
         </section>
 
     </main>
