--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,28 +10,31 @@
 
 
 </head>
+
 <body>
     <!-- header section start -->
     <header>
         <!-- Navigation Section -->
-       <nav>
-        <h3>G3 Architects</h3>
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact Us</li>
-            <li>Login</li>
-        </ul>
-       </nav>
-       <!-- Banner Section -->
-       <div class="banner">
-        <div class="banner-content">
-            <h1 class="banner-title">Brand New Group of Architects </h1>
-            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <button class="btn-primary">Explore More</button>
+        <nav>
+            <h3>G3 Architects</h3>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact Us</li>
+                <li>Login</li>
+            </ul>
+        </nav>
+        <!-- Banner Section -->
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects </h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="./images/banner.png" alt="">
         </div>
-        <img src="./images/banner.png" alt="">
-       </div>
     </header>
     <!-- header section end -->
     <main>
@@ -43,8 +47,11 @@
                 <img src="./images/team4.png" alt="">
             </div>
             <div class="teams-content">
-                <h3 class="teams-title"><span class="Quick">Quick list</span> <span class="of Our">of Our</span> <span class="Features">Features</span></h3>
-                <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 class="teams-title"><span class="Quick">Quick list</span> <span class="of Our">of Our</span> <span
+                        class="Features">Features</span></h3>
+                <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn-primary">Explore More</button>
 
             </div>
@@ -59,15 +66,38 @@
         <!-- Facts Section start -->
         <section class="Facts">
             <h3 class="Some-Facts">Some Facts</h3>
-            <p class="Facts-content">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-
+            <p class="Facts-content">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration.</p>
+                <div class="facts-card-container">
+                    <div class="card">
+                        <img src="./images/icons/ribon.png" alt="">
+                        <h2 class="card-states">54</h2>
+                        <p class="card-title">Awards Winnings</p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/icons/projects.png" alt="">
+                        <h2 class="card-states">1458</h2>
+                        <p class="card-title">Project Finished</p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/icons/customers.png" alt="">
+                        <h2 class="card-states">590</h2>
+                        <p class="card-title">Clients Worked</p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/icons/email.png" alt="">
+                        <h2 class="card-states">22578</h2>
+                        <p class="card-title">Email Send</p>
+                    </div>
+                </div>
         </section>
 
     </main>
 
     <footer>
-        
+
     </footer>
-    
+
 </body>
+
 </html>
